fixed tab not showing on informe departamento by passing the dept tid as query string argument

--- a/themes/carbray_theme/css/style.css
+++ b/themes/carbray_theme/css/style.css
@@ -53,6 +53,9 @@ ul {
 .margin-bottom-35 {
   margin-bottom: 35px;
 }
+.margin-bottom-70 {
+  margin-bottom: 70px;
+}
 .margin-left-10 {
   margin-left: 10px;
 }
